--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@assetcloud/asset-sdk",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "资产云前端SDK",
   "main": "dist/sdk.umd.js",
   "module": "dist/index.js",
@@ -13,7 +13,7 @@
     "build": "npm run build:umd && npm run build:es6 && npm run types",
     "pub": "npm publish --registry http://192.168.1.211:30677/"
   },
-  "author": "assetcloud",
+  "author": "LoveKicher",
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
