--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@assetcloud/asset-sdk",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "资产云前端SDK",
   "main": "dist/sdk.umd.js",
   "module": "dist/index.js",
@@ -15,6 +15,10 @@
   },
   "author": "LoveKicher",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SwingCosmic/assetcloud-sdk.git"
+  },
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
     "core-js": "^3.6.1"
