--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "types": "tsc -d --emitDeclarationOnly -p tsconfig.type.json",
     "build:umd": "webpack --mode production",
     "build": "npm run build:umd && npm run build:es6 && npm run types",
-    "pub": "npm publish --registry http://192.168.1.211:30677/"
+    "pub": "npm publish --registry http://192.168.1.211:30677/",
+    "pub:npmjs": "npm publish --registry http://registry.npmjs.org/  --access public"
   },
   "author": "LoveKicher",
   "license": "MIT",
